--- a/client/pages/index.module.css
+++ b/client/pages/index.module.css
@@ -1,31 +1,53 @@
 .container {
-  min-height: 100vh;
-  padding: 40px 16px;
-  background: #f8f8f8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 600px;
+  padding: 20px;
+  margin: 0 auto;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgb(0 0 0 / 10%);
 }
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-.title {
-  padding-top: 40px;
-  font-size: 80px;
-  font-weight: 900;
-  color: transparent;
-  text-align: center;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-clip: text;
-  background-size: 200% 200%;
-  animation: gradient 10s ease infinite;
+.input {
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.button {
+  padding: 10px;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+.answer {
+  margin-top: 20px;
+  font-size: 18px;
+  color: #555;
+}
+
+.error {
+  margin-bottom: 10px;
+  color: red;
 }
